IC-Test/objects/Homepage_Links__c.object
<CustomObject>
    <description>This will be used to allow Sales Ops to edit the Custom Links area on the homepage.  Replaces the built in custom links homepage component.</description>
    <fields>
        <fullName>Link_10__c</fullName>
        <label>Link 10</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_11__c</fullName>
        <label>Link 11</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_12__c</fullName>
        <label>Link 12</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X10_Bookmark__c</fullName>
        <label>10. Bookmark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X11_Bookmark__c</fullName>
        <label>11. Bookmark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12_Bookmark__c</fullName>
        <label>12. Bookmark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Homepage Links</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Homepage Links Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Homepage Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>